--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clean": "rimraf bin",
     "compile": "npm run clean && tsc",
     "build": "npm run compile && npm un reciple -g && npm i ./ -g",
-    "test": "npm run build && cd test && source .env; reciple"
+    "test:run": "cd test && reciple",
+    "test:compile": "npm run build && npm run test:run"
   },
   "dependencies": {
     "commander": "^9.1.0",
