--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reciple",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "A Discord.js bot",
   "author": "FalloutStudios",
   "license": "GPL-3.0",
@@ -26,6 +26,7 @@
   "dependencies": {
     "commander": "^9.2.0",
     "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0",
     "fallout-utility": "^1.3.11",
     "yaml": "^2.0.1"
   },
