--- a/resource/reciple.yml
+++ b/resource/reciple.yml
@@ -1,41 +1,69 @@
+# Your bot token here
+# To use env variable as a token just do it like this env:TOKEN_ENV
 token: TOKEN
+
+# Message command prefix
 prefix: '!'
 
+
+# Commands options
 commands:
   messageCommand:
+    # enable message commands
     enabled: true
+    # reply when an error occured
     replyOnError: false
+    # command argument separator
     commandArgumentSeparator: ' '
   interactionCommand:
+    # enable interaction commands
     enabled: true
+    # reply when an error occured
     replyOnError: false
+    # register interaction commands on bot ready
     registerCommands: true
+    # register commands to specific guild(s) empty to make it global
     guilds: []
 
+
+# Commands permissions
 permissions:
   messageCommands:
+    # enable command permissions
     enabled: true
     commands:
       - command: 'stop'
         permissions: ['ADMINISTRATOR']
   interactionCommands:
+    # enable command permissions
     enabled: true
     commands:
       - command: 'stop'
         permissions: ['ADMINISTRATOR']
 
 
+# Ignored channel IDs
 ignoredChannels:
+  # enable ignored channels
   enabled: false
+  # convert to only allowed channels
   convertToAllowList: false
+  # channel IDs
   channels: []
 
+
+# Logger options
 fileLogging:
+  # enable console output to file
   enabled: true
+  # enable debug mode
   debugmode: false
+  # stringify logged JSONs
   stringifyLoggedJSON: false
+  # log file path
   logFilePath: './logs/latest.log'
 
+# Client options
 client:
   intents:
     - 'GUILDS'
@@ -45,6 +73,7 @@ client:
     - 'GUILD_MESSAGES'
     - 'GUILD_MESSAGE_REACTIONS'
 
+# Bot replies
 messages:
   notEnoughArguments: 'Not enough arguments.'
   noPermissions:
@@ -54,6 +83,20 @@ messages:
     content: 'An error occurred.'
     ephemeral: true
 
+
+###################################################
+#                                                 #
+#   #####  #####  #    #   ###   #####  ####      #
+#   #   #  #   #  # #  #  #      #      #   #     #
+#   #   #  #####  #  # #  # ###  ###    ####      #
+#   #  #   #   #  #    #  #   #  #      #   #     #
+#   ###    #   #  #    #   ###   #####  #    #    #
+#                                                 #
+###################################################
+## Modifying these values below can cause errors ##
+
+# Modules folder
 modulesFolder: 'modules'
 
+# Current version
 version: VERSION
