--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reciple",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A Discord.js bot",
   "author": "FalloutStudios",
   "license": "GPL-3.0",
@@ -19,19 +19,19 @@
     "clean": "rimraf bin",
     "compile": "yarn clean && tsc",
     "build": "yarn compile && npm un reciple -g && npm i ./ -g",
-    "build:publish": "yarn run build && npm publish",
+    "build:publish": "yarn run build && yarn publish",
     "test": "cd test && reciple",
     "test:compile": "yarn run build && yarn test:run"
   },
   "dependencies": {
     "commander": "^9.2.0",
-    "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0",
-    "fallout-utility": "^1.3.13",
-    "yaml": "^2.0.1"
+    "discord.js": "^13.7.0",
+    "dotenv": "^16.0.1",
+    "fallout-utility": "^1.3.14",
+    "yaml": "^2.1.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.31",
+    "@types/node": "^17.0.33",
     "typescript": "^4.6.4"
   }
 }
