--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "clean": "rimraf bin",
     "compile": "yarn clean && tsc",
     "build": "yarn compile && npm un reciple -g && npm i ./ -g",
-    "build:publish": "yarn run build && rm CHANGELOG.md && changelog generate -m -m -M && yarn publish",
+    "build:publish": "yarn run build && yarn run changelog && yarn publish",
+    "changelog": "rm CHANGELOG.md && changelog generate -m -m -M",
     "test": "cd test && reciple",
     "test:compile": "yarn run build && yarn test:run"
   },
@@ -32,7 +33,7 @@
     "yaml": "^2.1.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.33",
+    "@types/node": "^17.0.35",
     "generate-changelog": "^1.8.0",
     "typescript": "^4.6.4"
   }
