--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
     "fallout-utility": "^1.3.14",
+    "semver": "^7.3.7",
     "yaml": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
+    "@types/semver": "^7.3.9",
     "typescript": "^4.6.4"
   }
 }
