removed default ignored file

--- a/resource/reciple.yml
+++ b/resource/reciple.yml
@@ -86,8 +86,7 @@ messages:
     ephemeral: true
 
 # Ignored Files
-ignoredFiles:
-  - 'test.js'
+ignoredFiles: []
 
 
 ###################################################
