--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "dotenv": "^16.0.1",
         "fallout-utility": "^1.3.14",
         "semver": "^7.3.7",
+        "wildcard-match": "^5.1.2",
         "yaml": "^2.1.1"
     },
     "devDependencies": {
