--- a/resource/reciple.yml
+++ b/resource/reciple.yml
@@ -75,6 +75,7 @@ client:
 # Bot replies
 messages:
   notEnoughArguments: 'Not enough arguments.'
+  invalidArguments: 'Invalid argument(s) given.'
   noPermissions:
     content: 'You do not have permission to use this command.'
     ephemeral: true
