--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reciple",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "description": "A Discord.js bot",
   "author": "FalloutStudios",
   "license": "GPL-3.0",
@@ -22,7 +22,7 @@
     "clean": "rm -rf bin",
     "build": "yarn clean && npx tsc && npm un reciple -g && npm i ./ -g",
     "build:publish": "yarn run build && yarn publish",
-    "test": "yarn run build && yarn test:run",
+    "test": "yarn run build && yarn test:start",
     "test:start": "cd test && npx reciple"
   },
   "dependencies": {
