--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^18.0.0",
     "@types/semver": "^7.3.10",
     "typedoc": "^0.23.5",
+    "typedoc-just-the-docs-theme": "^0.0.1",
     "typedoc-plugin-mdn-links": "^2.0.0",
     "typescript": "^4.7.4"
   }
