--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   ],
   "scripts": {
     "clean": "rm -rf bin",
-    "build": "yarn clean && npx tsc && npm un reciple -g && npm i ./ -g && yarn typedoc",
+    "build": "yarn clean && npx tsc && npm un reciple -g && npm i ./ -g",
     "build:publish": "yarn run build && yarn publish",
     "test": "yarn run build && yarn test:start",
     "test:start": "cd test && npx reciple",
+    "prepublish": "yarn typedoc",
     "typedoc": "npx typedoc"
   },
   "dependencies": {
