--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.6.2",
   "description": "A Discord.js bot",
   "author": "FalloutStudios",
+  "homepage": "https://falloutstudios.github.io/Reciple",
   "license": "GPL-3.0",
   "main": "bin/index.js",
   "bin": {
@@ -24,7 +25,7 @@
     "build:publish": "yarn run build && yarn publish",
     "test": "yarn run build && yarn test:start",
     "test:start": "cd test && npx reciple",
-    "prepublish": "yarn typedoc",
+    "postpublish": "yarn typedoc",
     "typedoc": "npx typedoc"
   },
   "dependencies": {
@@ -40,6 +41,7 @@
     "@types/node": "^18.0.0",
     "@types/semver": "^7.3.10",
     "typedoc": "^0.23.5",
+    "typedoc-plugin-djs-links": "^1.2.0",
     "typedoc-plugin-mdn-links": "^2.0.0",
     "typescript": "^4.7.4"
   }
