--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "build:publish": "yarn run build && yarn publish",
     "test": "yarn run build && yarn test:start",
     "test:start": "cd test && npx reciple",
-    "postpublish": "yarn typedoc",
-    "typedoc": "npx typedoc"
+    "postpublish": "yarn build:docs && yarn update:docs",
+    "build:docs": "cd docs && yarn build",
+    "update:docs": "cd docs && git commit -a -m \"Update docs\" && git push"
   },
   "dependencies": {
     "commander": "^9.3.0",
