UPDATE TO A BUGGY LOGGER

--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "update:docs": "cd docs && yarn update"
   },
   "dependencies": {
+    "chalk": "4.1.2",
     "commander": "^9.3.0",
     "dotenv": "^16.0.1",
-    "fallout-utility": "^1.4.0",
+    "fallout-utility": "^1.4.1",
     "semver": "^7.3.7",
     "wildcard-match": "^5.1.2",
     "yaml": "^2.1.1"
