--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reciple",
-  "version": "1.7.1-pre.0",
+  "version": "2.0.0-pre.0",
   "description": "A Discord.js bot",
   "author": "FalloutStudios",
   "homepage": "https://falloutstudios.github.io/Reciple",
@@ -21,7 +21,7 @@
   ],
   "scripts": {
     "clean": "rm -rf bin",
-    "build": "yarn run clean && npx tsc && yarn run reinstall && yarn run build:docs",
+    "build": "yarn run clean && npx tsc && yarn run reinstall",
     "build:publish": "yarn run build && yarn publish",
     "build:pub-prerelease": "yarn run build && yarn publish --tag beta",
     "reinstall": "npm un reciple -g && npm i ./ -g",
