--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reciple",
-  "version": "3.0.0-pre.2",
+  "version": "3.0.0",
   "description": "Handler for Discord.js",
   "author": "FalloutStudios",
   "homepage": "https://reciple.js.org",
