--- a/package.json
+++ b/package.json
@@ -1,32 +1,23 @@
 {
   "name": "reciple",
   "version": "3.1.0",
-  "description": "Handler for Discord.js",
+  "bin": "bin/bin.js",
+  "license": "GPL-3.0",
+  "main": "bin/index.js",
   "author": "FalloutStudios",
+  "description": "Handler for Discord.js",
   "homepage": "https://reciple.js.org",
+  "keywords": [
+    "Discord",
+    "Discord.js handler",
+    "Reciple"
+  ],
   "contributors": [
     "GhexterCortes <cortesghexter@gmail.com>"
   ],
   "bugs": {
     "url": "https://github.com/FalloutStudios/reciple/issues"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/FalloutStudios/reciple.git"
-  },
-  "license": "GPL-3.0",
-  "main": "bin/index.js",
-  "bin": "bin/bin.js",
-  "engines": {
-    "node": ">=16.9.0"
-  },
-  "files": [
-    "bin",
-    "resource",
-    "package.json",
-    "LICENSE",
-    "README.md"
-  ],
   "scripts": {
     "clean": "rm -rf bin",
     "build": "yarn clean && yarn exec tsc",
@@ -38,6 +29,23 @@
     "test:start": "cd test && yarn exec reciple -D",
     "publish:docs": "yarn build:docs && yarn update:docs"
   },
+  "workspaces": [
+    "./docs/"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FalloutStudios/reciple.git"
+  },
+  "engines": {
+    "node": ">=16.9.0"
+  },
+  "files": [
+    "bin",
+    "resource",
+    "package.json",
+    "LICENSE",
+    "README.md"
+  ],
   "dependencies": {
     "chalk": "4.1.2",
     "commander": "^9.4.0",
@@ -56,8 +64,5 @@
   "peerDependencies": {
     "discord.js": "14.0.x"
   },
-  "workspaces": [
-    "./docs/"
-  ],
   "packageManager": "yarn@3.2.2"
 }
