--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "clean": "rm -rf bin",
     "build": "yarn clean && yarn exec tsc",
-    "build:publish": "yarn build && yarn publish && yarn build:docs && yarn publish:docs",
+    "build:publish": "yarn build && yarn npm publish && yarn build:docs && yarn publish:docs",
     "build:pub-prerelease": "yarn build && yarn publish --tag pre",
     "build:docs": "yarn workspace docs build",
     "update:docs": "yarn workspace docs update",
