--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "discord.js": "14.0.x"
+    "discord.js": "^14.0.3"
   },
   "packageManager": "yarn@3.2.2"
 }
