--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reciple",
-  "version": "4.0.0-pre.3",
+  "version": "4.0.0-pre.4",
   "bin": "bin/bin.js",
   "license": "GPL-3.0",
   "main": "bin/index.js",
@@ -22,7 +22,7 @@
     "clean": "yarn exec rimraf bin",
     "build": "yarn clean && yarn exec tsc",
     "build:publish": "yarn build && yarn npm publish && yarn build:docs && yarn publish:docs",
-    "build:pub-prerelease": "yarn build && yarn npm publish --tag pre",
+    "build:publish-prerelease": "yarn build && yarn npm publish --tag pre",
     "build:docs": "yarn exec typedoc --tsconfig ./docs/typedoc.json",
     "update:docs": "yarn workspace docs update",
     "test": "yarn build && yarn test:start",
