--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reciple",
-  "version": "4.1.2",
+  "version": "5.0.0-pre.1",
   "bin": "bin/bin.js",
   "license": "GPL-3.0",
   "main": "bin/index.js",
