--- a/resource/reciple.yml
+++ b/resource/reciple.yml
@@ -60,7 +60,7 @@ fileLogging:
   # stringify logged JSONs
   stringifyLoggedJSON: false
   # log file path
-  logFilePath: './logs/latest.log'
+  logFilePath:
 
 # Client options
 # Learn more about client options at https://discord.js.org/#/docs/discord.js/main/typedef/ClientOptions
