--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "bin": "bin/bin.js",
   "license": "GPL-3.0",
   "main": "bin/index.js",
+  "typings": "bin/index.d.ts",
   "author": "FalloutStudios",
   "description": "Handler for Discord.js",
   "homepage": "https://reciple.js.org",
