--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "reciple",
   "version": "5.4.0",
-  "bin": "bin/bin.js",
   "license": "GPL-3.0",
-  "main": "bin/index.js",
   "typings": "bin/index.d.ts",
   "author": "FalloutStudios",
   "description": "Handler for Discord.js",
   "homepage": "https://reciple.js.org",
+  "bin": {
+    "reciple": "./bin/cjs/bin.js"
+  },
+  "exports": {
+    "import": "./bin/mjs/bin.js",
+    "require": "./bin/cjs/index.js"
+  },
   "keywords": [
     "Discord",
     "Discord.js handler",
@@ -21,7 +26,7 @@
   },
   "scripts": {
     "clean": "yarn exec rimraf bin",
-    "build": "yarn clean && yarn exec tsc",
+    "build": "yarn clean && yarn exec tsc -p ./tsconfigs/tsconfig-cjs.json && yarn exec tsc -p ./tsconfigs/tsconfig-mjs.json",
     "build:publish": "yarn build && yarn npm publish && yarn build:docs && yarn publish:docs",
     "build:publish-prerelease": "yarn build && yarn npm publish --tag pre",
     "build:docs": "yarn exec typedoc --tsconfig ./docs/typedoc.json",
