--- a/tsconfigs/tsconfig-mjs.json
+++ b/tsconfigs/tsconfig-mjs.json
@@ -4,6 +4,8 @@
     "outDir": "../bin/mjs",
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "declaration": false,
+    "declarationDir": null
   }
 }
