--- a/tsconfigs/tsconfig.json
+++ b/tsconfigs/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
+    "declarationDir": "../bin/types"
   }
 }
