--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "homepage": "https://reciple.js.org",
   "main": "./bin/cjs/index.js",
   "module": "./bin/mjs/index.js",
-  "bin": "./bin/cjs/bin.js",
+  "bin": {
+    "reciple": "./bin/cjs/bin.js"
+  },
   "exports": {
     "import": "./bin/mjs/index.js",
     "require": "./bin/cjs/index.js"
