--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "author": "FalloutStudios",
   "description": "Handler for Discord.js",
   "homepage": "https://reciple.js.org",
-  "main": "./bin/cjs/index.js",
-  "module": "./bin/mjs/index.js",
   "bin": {
     "reciple": "./bin/cjs/bin.js"
   },
   "exports": {
-    "import": "./bin/mjs/index.js",
+    "import": "./bin/mjs/bin.js",
     "require": "./bin/cjs/index.js"
   },
   "keywords": [
@@ -28,7 +26,7 @@
   },
   "scripts": {
     "clean": "yarn exec rimraf bin",
-    "build": "yarn clean && echo Building commonjs && yarn exec tsc -p ./tsconfigs/tsconfig-cjs.json && echo Building mjs && yarn exec tsc -p ./tsconfigs/tsconfig-mjs.json && node ./tsconfigs/package.json.js",
+    "build": "yarn clean && echo Building commonjs && yarn exec tsc -p ./tsconfigs/tsconfig-cjs.json && echo Building mjs && yarn exec tsc -p ./tsconfigs/tsconfig-mjs.json",
     "build:publish": "yarn build && yarn npm publish && yarn build:docs && yarn publish:docs",
     "build:publish-prerelease": "yarn build && yarn npm publish --tag pre",
     "build:docs": "yarn exec typedoc --tsconfig ./docs/typedoc.json",
