--- a/tsconfigs/tsconfig.json
+++ b/tsconfigs/tsconfig.json
@@ -8,7 +8,6 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "strict": true,
-    "declarationDir": "../bin/types"
+    "strict": true
   }
 }
