--- a/resource/reciple.yml
+++ b/resource/reciple.yml
@@ -39,6 +39,8 @@ commands:
     registerCommands: true
     # set required permissions for interaction commands
     setRequiredPermissions: true
+    # accept replied or deffered command interaction
+    acceptRepliedInteractions: false
     # register commands to specific guild(s) empty to make it global
     guilds: []
     # overwrite command permissions
