--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "module": "commonjs",
     "rootDir": "./src",
     "declaration": true,
-    "outDir": "./bin",
+    "outDir": "./dist/cjs",
+    "declarationDir": "./dist/types",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
