--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "reciple",
   "version": "5.4.4",
-  "bin": "bin/bin.js",
+  "bin": "dist/cjs/bin.js",
   "license": "GPL-3.0",
-  "main": "bin/index.js",
-  "typings": "bin/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "typings": "dist/types/index.d.ts",
   "author": "FalloutStudios",
   "description": "Handler for Discord.js",
   "homepage": "https://reciple.js.org",
@@ -20,7 +20,7 @@
     "url": "https://github.com/FalloutStudios/reciple/issues"
   },
   "scripts": {
-    "clean": "yarn exec rimraf bin",
+    "clean": "yarn exec rimraf dist",
     "build": "yarn clean && yarn exec tsc",
     "build:publish": "yarn build && yarn npm publish && yarn build:docs && yarn publish:docs",
     "build:publish-prerelease": "yarn build && yarn npm publish --tag pre",
@@ -43,7 +43,7 @@
     "node": ">=16.9.0"
   },
   "files": [
-    "bin",
+    "dist",
     "resource",
     "package.json",
     "LICENSE",
