--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "./src/**/*"
   ],
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2020",
     "module": "commonjs",
     "rootDir": "./src",
     "declaration": true,
